RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TopBar/TopBar.css
/* z-index for drawer is 1200, per DOC
https://material-ui.com/customization/z-index/ */

html {
  font-size: 14px;
}

.MuiTypography-body1 {
  float: left;
}

.MuiBreadcrumbs-ol{
  margin-top: 5px !important;
  position: relative;
  left: 20px;
}

/* Styling for change button */
.change_button {
  float: left;
  font-size: 16px;
  margin-left: 40px;
  margin-top: 5px;
  text-decoration: underline;
  color: #888888;
  cursor: pointer;
}

.change_button:active {
  color: #000000;
}

.main-container {
    position: sticky;
    top: 0;
    z-index: 999;
}
nav {
    border-bottom: 1px;
    background-color: #EDEDED;
    height: 35px;
    z-index: 1201;
    position: relative;
}
.weather{
  float: right;
  position: relative;
}
.temperature_icon {
  float: right;
  height: 35px;
  width: 35px;
  margin-right: 5px;
  margin-left: 5px;
}
div.weather p {
  margin: 0px;
  font-size: 12px;
  margin-right: 20px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
button {
  margin: -5%;
}
button.btn.btn-sm.shadow-none.disabled{
  color: black;
}
.btn.disabled {
  font-weight: bold;
  opacity: inherit;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  }
}
.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

